# POS_Project

./: .env  .gitignore
YZY-POS/: package-lock.json  package.json
YZY-POS/scripts/: clean-build.cjs  copy-backend-to-resources.cjs
YZY-POS/src/: main.ts
YZY-POS/src-tauri/: 0000.txt  Cargo.toml  receipt_1759294295.html  receipt_1759294921.txt  tauri-build.ps1  tauri.conf.json
YZY-POS/src-tauri/capabilities/: default.json
YZY-POS/src-tauri/icons/: Products_rows.csv  Supabase Snippet Daily Sales Totals (date range) (1).csv  Supabase Snippet Daily Sales Totals (date range) (2).csv  Supabase Snippet Daily Sales Totals (date range) (3).csv  Supabase Snippet Daily Sales Totals (date range) (4).csv  Supabase Snippet Daily Sales Totals (date range) (5).csv  Supabase Snippet Daily Sales Totals (date range).csv
YZY-POS/src-tauri/src/: commands.rs  lib.rs  main.rs
pos-backend/: .env  package-lock.json  package.json  server.js  simpleFetchTest.js  supabaseClient.js  testConnection.js
pos-backend/receipts/: receipt-zy609-test-2025-09-24T22-02-59-190Z.txt
pos-backend/src/config/: cookie.js  (+2 more)
pos-frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tsconfig.json
pos-frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
pos-frontend/pos-frontend/: package-lock.json  package.json
pos-frontend/src/: middleware.ts
(+1619 files in other folders)
